--- a/source/package.json
+++ b/source/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.0",
-    "showdown": "1.9.1"
+    "showdown": "1.9.1",
+    "showdown-highlight": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
